--- a/projet/homepage.html
+++ b/projet/homepage.html
@@ -38,6 +38,17 @@
 </nav>
 
 </div>
+<div id="container3"> 
+<h1>Plante</h1>
+<p>
+Bienvenue dans l’univers de Terrasse et Jardin de Paris, architecte-paysagiste et créateur d’Art à Vivre.
+<br>
+Nous semons des idées nouvelles et cultivons un savoir-faire d’excellence pour réaliser les plus belles envies, comme les plus douces folies.
+<br>
+À celles et ceux qui rêvent de réenchanter leur écrin extérieur et de végétaliser leur cocon intérieur, nos architectes créatifs et artisans compagnons sont à votre écoute.  
+</p>
+
+</div>
 <div id="container2"> 
 <img  src="image/jardin1.png" alt="jardin1" width="780px" height="auto">
 <img  src="image/jardin2.png" alt="jardin2" width="780px" height="369px">
