--- a/projet/about.html
+++ b/projet/about.html
@@ -42,7 +42,7 @@
 <div id="container3"> 
 <h1>About</h1>
 <p>
-Plante est une société Française, elle est spécialisé dans la décoration de terrasse.
+Bienvenue dans l’univers de Terrasse et Jardin de Paris, architecte-paysagiste et créateur d’Art à Vivre.
 <br>
 Respectueux de leur image, nous sommes à leur écoute et restons réactifs à toutes leurs demandes. Nos équipes sont toujours prêtes à répondre aux questions et à apporter des conseils et des solutions dans le domaine du végétal dans l’entreprise.
 <br>
