--- a/projet/contact.html
+++ b/projet/contact.html
@@ -38,7 +38,7 @@
 </nav>
 
 </div>
-<form name="comments" action="submitted.html" method="get">
+<form name="comments" action="https://hnitest.go.yj.fr" method="post">
 <div id="container3"> 
 <h1>Contacter nous:</h1>
 <p>
@@ -47,10 +47,17 @@ Si vous voulez avoir notre expertisse pour votre extérieure.
 Laissez-nous vos informations et nous vous recontacterons le plus vite possible.
 </p>
   
-<p style="padding: 10px;">Name  <input class="n" type="text" placeholder="Nom Prénom"></p>
-<p>Email <input class="n" type="text" placeholder="exemple@email.com"></p>
-<p>Numéro <input class="n" type="text" placeholder="+33 1 01 01 01 01"></p>
-<p>Votre projet <textarea placeholder="Parler nous de votre projet" rows="4" cols="200"></textarea></p>
+<p style="padding: 10px;">Nom  <input class="n" type="text" placeholder="Nom " name="lastname"></p>
+<p>Prénom <input class="n" type="text" placeholder="Prénom" name="firstname"></p>
+<p>Email <input class="n" type="text" placeholder="exemple@email.com" name="email"></p>
+ <p>Pays <select style="text-align:left;" name="country" id="pays">
+  <option value="FR">France</option>
+  <option value="ES">Espagne</option>
+  <option value="IT">Italie</option>
+ 
+</select> </p>
+
+<p>Votre projet <textarea placeholder="Parler nous de votre projet" rows="4" cols="200" name="request"></textarea></p>
 
 <input  type="Submit">
 
