--- a/projet/contact.html
+++ b/projet/contact.html
@@ -49,7 +49,7 @@ Laissez-nous vos informations et nous vous recontacterons le plus vite possible.
   
 <p style="padding: 10px;">Nom  <input class="n" type="text" placeholder="Nom " name="lastname"></p>
 <p>Prénom <input class="n" type="text" placeholder="Prénom" name="firstname"></p>
-<p>Email <input class="n" type="text" placeholder="exemple@email.com" name="email"></p>
+<p>Email <input class="n" type="email" placeholder="exemple@email.com" name="email"></p>
  <p>Pays <select style="text-align:left;" name="country" id="pays">
   <option value="FR">France</option>
   <option value="ES">Espagne</option>
